--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,9 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textAppearance">@style/Signal.Text.BodyLarge</item>
         <item name="backgroundTint">@color/signal_dark_colorSurface4</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Widget.Signal.Button.TextButton" parent="Widget.Material3.Button.TextButton">
@@ -28,6 +31,9 @@
     <style name="NoAnimation.Theme.BlackScreen" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:windowBackground">@android:color/black</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.DialogActivity" parent="Signal.DayNight">
@@ -37,43 +43,67 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="AppCompatAlertDialogStyleLight" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">@color/signal_colorPrimary</item>
         <item name="android:textColor">@null</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="AppCompatAlertDialogStyleDark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/signal_colorPrimary</item>
         <item name="android:textColor">@null</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="AppCompatDialogStyleLight" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/signal_colorPrimary</item>
         <item name="android:textColor">@null</item>
         <item name="android:windowBackground">@drawable/dialog_background</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="AppCompatDialogStyleDark" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@color/signal_colorPrimary</item>
         <item name="android:windowBackground">@drawable/dialog_background</item>
         <item name="android:textColor">@null</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.Animation.FullScreenDialog" parent="@android:style/Animation.Activity">
         <item name="android:windowEnterAnimation">@anim/fade_scale_in</item>
         <item name="android:windowExitAnimation">@anim/fade_scale_out</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.Animation.AddMessageDialog" parent="@android:style/Animation.Activity">
         <item name="android:windowEnterAnimation">@anim/slide_from_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_to_bottom</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.Animation.TextStoryPostEntryDialog" parent="Animation.AppCompat.Dialog">
         <item name="android:windowEnterAnimation">@anim/text_entry_enter</item>
         <item name="android:windowExitAnimation">@anim/text_entry_exit</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <!-- ActionBar styles -->
@@ -110,10 +140,16 @@
 
     <style name="TextSecure.LightActionBar.Settings">
         <item name="colorControlHighlight">@color/transparent_black_15</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.DarkActionBar.Settings">
         <item name="colorControlHighlight">@color/transparent_white_15</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.LightActionBar.DarkText"
@@ -125,6 +161,9 @@
         <item name="background">@color/core_grey_95</item>
         <item name="android:background">@color/core_grey_95</item>
         <item name="elevation">4dp</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.LightActionBar.TabBar"
@@ -134,6 +173,9 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">#BFffffff</item>
         <item name="elevation">4dp</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.DarkActionBar.Conversation">
@@ -149,17 +191,26 @@
         <item name="android:colorControlNormal" tools:ignore="NewApi">@color/signal_text_toolbar_subtitle</item>
         <item name="colorControlActivated">@color/core_ultramarine</item>
         <item name="android:colorControlActivated" tools:ignore="NewApi">@color/core_ultramarine</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Signal.Toolbar.PaymentInfoCard" parent="@style/Widget.AppCompat.ActionBar">
         <item name="actionOverflowButtonStyle">@style/Signal.Toolbar.Overflow.PaymentCard</item>
         <item name="android:actionOverflowButtonStyle">@style/Signal.Toolbar.Overflow.PaymentCard</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.TitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/signal_text_primary</item>
         <item name="android:textColorHint">@color/signal_text_secondary</item>
         <item name="android:textSize">16sp</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="TextSecure.TitleTextStyle.Conversation" parent="TextSecure.TitleTextStyle">
@@ -261,18 +312,27 @@
     <style name="PreferenceThemeOverlay.Fix" parent="PreferenceThemeOverlay.v14.Material">
         <item name="android:divider">@null</item>
         <item name="android:dividerHeight">0dp</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Signal.SearchView" parent="Widget.AppCompat.SearchView">
         <item name="closeIcon">@drawable/ic_x_20</item>
         <item name="searchHintIcon">@drawable/ic_search_24</item>
         <item name="searchIcon">@drawable/ic_search_24</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Signal.Toolbar.Overflow" parent="Widget.AppCompat.ActionButton.Overflow">
         <item name="srcCompat">@drawable/ic_more_vert_24</item>
         <item name="android:src">@null</item>
         <item name="android:tint">@color/core_white</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Signal.Toolbar.Overflow.Light">
@@ -284,6 +344,9 @@
     <style name="Signal.Toolbar.Overflow.Conversation">
         <item name="srcCompat">@drawable/ic_more_vert_conversation_24</item>
         <item name="android:tint">@null</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Signal.Toolbar.Overflow.PaymentCard">
@@ -295,11 +358,17 @@
         <item name="closeItemLayout">@layout/action_mode_close_layout</item>
         <item name="theme">@style/Signal.ActionModeTheme</item>
         <item name="height">@dimen/signal_m3_toolbar_height</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Signal.ActionModeTheme" parent="ThemeOverlay.AppCompat">
         <item name="actionOverflowButtonStyle">@style/Signal.DayNight.Toolbar.Overflow</item>
         <item name="android:actionOverflowButtonStyle">@style/Signal.DayNight.Toolbar.Overflow</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <declare-styleable name="ProgressCard">
@@ -380,6 +449,9 @@
         <item name="boxStrokeColor">@color/signal_colorOutline</item>
         <item name="boxStrokeErrorColor">@color/signal_colorError</item>
         <item name="hintTextAppearance">@style/Signal.Text.LabelMedium</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Widget.Signal.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
@@ -399,6 +471,9 @@
         <item name="android:paddingEnd">6dp</item>
         <item name="boxCornerRadiusTopEnd">2dp</item>
         <item name="boxCornerRadiusTopStart">2dp</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Widget.MaterialComponents.Button.TextButton.Dialog">
